<resources>
    <string name="default_font">sans-serif-light</string>
    <string name="AppBranch">develop</string>
    <string name="AppNameCn">错题本Story</string>
    <string name="AppAuthor">EdgeNeko in SakuraTrak studio</string>
    <string name="AppVersionCn">版本:develop 1.0.0 内测版本 发布于19.2.5</string>
    <string name="title_home">错题本</string>
    <string name="title_quiz">小测</string>
    <string name="ChoseQuestionType">选择题目类型</string>
    <string name="ChoseSubject">选择科目</string>
    <string name="title_activity_learning_unit_choice">选择单元</string>
    <string name="Cancel">取消</string>
    <string name="unitCompute">单元与统计</string>
    <string name="times_too_few_warn">由于小测次数不足,无法提供足够准确的针对训练,将继续将有关本单元的题目安排在小测中.</string>
    <string name="reset_info">重置统计信息</string>
    <string name="rm_unit">删除单元</string>
    <string name="quizTime">小测次数/单元掌握程度</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="confirmQuestionResetStat_msg">%s的所有做题记录和统计信息将清空! \n确定要从零开始吗?</string>
    <string name="confirmUnitResetStat_msg">%s中所有错题的所有做题记录和统计信息将清空! \n确定要从零开始吗?</string>
    <string name="confirmLog_title">清空记录确认</string>
    <string name="confirmRm_msg">%s 将永久失去(真的很久!)!</string>
    <string name="confirmRm_title">删除确认</string>
    <string name="failSaveUnitError">错误:无法保存单元文件</string>
    <string name="questionCount">错题数量</string>
    <string name="test">小测</string>
    <string name="view">查看</string>
    <string name="questionPreview">错题预览</string>
    <string name="subject">科目</string>
    <string name="filter">过滤器</string>
    <string name="sqlExp">Story酱被玩坏了…错误:SqlException</string>
    <string name="unitEmptyUi">当前没有创建任何单元\n点击添加按钮开始创建喵</string>
    <string name="aboutTitle">关于错题本Story</string>
    <string name="about">关于</string>
    <string name="questionName">题目名称</string>
    <string name="questionSrc">题目来源</string>
    <string name="unit">单元</string>
    <string name="emptyUnit">(未指定)</string>
    <string name="unitName">单元名称</string>
    <string name="error">错误</string>
    <string name="editQuestion">修改错题</string>
    <string name="questionImg">题目图片</string>
    <string name="multiplyChoiceAnswer">多选题答案</string>
    <string name="singleChoiceAnswer">单选题答案</string>
    <string name="answerA">A</string>
    <string name="answerB">B</string>
    <string name="answerC">C</string>
    <string name="answerD">D</string>
    <string name="fillAnswer">填空题答案</string>
    <string name="fillAnswerTip">多个均为正确的答案可用 ; 或 ； 分割.\n请不要留有多余的空格以免影响自动校对的识别</string>
    <string name="questionAdditionInfo">题目补充信息</string>
    <string name="analysisAdditionData">解析补充信息</string>
    <string name="answer">答案</string>
    <string name="analysis">解析</string>
    <string name="mdUsage">支持使用MarkDown来萌化你的文本~</string>
    <string name="notice_permission_camera">请允许Story酱使用相机权限喵</string>
    <string name="errPermissionDenied">权限申请失败</string>
    <string name="setCameraPermission">请到设置允许本应用使用相机权限</string>
    <string name="answerQuestionAnswer">解答题答案</string>
    <string name="save">保存</string>
    <string name="settings">设定</string>
    <string name="settit_dailyQuiz">显示每天做题通知</string>
    <string name="setval_dailyQuiz">每天提醒你复习巩固错题~</string>
    <string name="settit_dailyQuizTime">每天做题时间</string>
    <string name="storage">存储</string>
    <string name="settit_workbookSaveLoc">错题本存储位置</string>
    <string name="settit_importWorkbook">导入错题本</string>
    <string name="setval_importWorkbook">从.sscworkbook文件</string>
    <string name="settit_exportWorkbook">导出错题本</string>
    <string name="setval_exportWorkBook">到.sscworkbook文件</string>
    <string name="setval_clearBmCache">清空缩略图缓存不会影响到你的错题信息,但会减缓下次载入错题的速度</string>
    <string name="settit_clearBmCache">清空缩略图缓存</string>
    <string name="setval_dangerZone">千万别手滑!\n这些设置主要用于给作者测试时用的,你还是别点进来了吧..</string>
    <string name="settit_dangerZone">危险操作区</string>
    <string name="settit_clearStatInfo">重置所有统计信息</string>
    <string name="setval_clearStatInfo">将删除所有小测记录(包括已归档的错题的记录),重置单元统计信息,你的错题不会受到影响</string>
    <string name="setval_clearAll">将删除所有错题和单元,包括已归档的错题和单元\n壮士一去兮,就回不来了…</string>
    <string name="settit_clearAll">永久删除所有错题和单元</string>
    <string name="Author">作者</string>
    <string name="branch">分支</string>
    <string name="showDetailedAbout">显示详细关于信息</string>
    <string name="reset">重置</string>
    <string name="feedback">问题与建议反馈</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="biologic">生物</string>
    <string name="history">历史</string>
    <string name="politics">政治</string>
    <string name="geo">地理</string>
    <string name="showAnswer">显示答案</string>
    <string name="share">分享</string>
    <string name="edit">编辑</string>
    <string name="workbookEmptyUi">开始记录错题吧~</string>
    <string name="stat">统计</string>
    <string name="hide">归档</string>
    <string name="delete">删除</string>
    <string name="multiChoiceQuestion">多选题</string>
    <string name="singleChoiceQuestion">单选题</string>
    <string name="fillQuestion">填空题</string>
    <string name="editableFillQuestion">可输入的填空题</string>
    <string name="answerQuestion">解答题</string>
    <string name="difficulty">难度</string>
    <string name="CreateTime">创建时间</string>
    <string name="StatAddQuestionNotify">加入些错题再来看吧~</string>
    <string name="StatUnitPie">错题的单元分布</string>
    <string name="StatDifficultyPie">错题的难度分布</string>
    <string name="like">喜欢</string>
    <string name="info">信息</string>
    <string name="deleted">已删除</string>
    <string name="skip">跳过</string>
    <string name="viewAnswer">查看答案</string>
    <string name="adv">高级</string>
    <string name="displayMode">显示模式</string>
    <string name="optimizeImage">优化图片</string>
    <string name="optimizeImageDetail">在错题本添加图片时自动优化图片(提高对比度)方便阅读</string>
    <string name="mark_allright">全对!</string>
    <string name="mark_nicejob">还行啦</string>
    <string name="mark_justans">只有答案分</string>
    <string name="mark_zero">完全不会</string>
    <string name="noticeMarkAnswer">批改下你的答案吧~</string>
    <string name="exitQuizDialogAskTitle">退出小测?</string>
    <string name="exitQuizDialogAskState0">还在做题中,真的要放弃喵?</string>
    <string name="exitQuizDialogAskState1">还没完成批改,真的要退出喵?</string>
    <string name="exitQuiz">退出小测</string>
    <string name="nextQuestion">下一题</string>
    <string name="allRight">完全正确</string>
    <string name="halfRight">部分正确</string>
    <string name="noneRight">完全错误</string>
    <string name="completeQuiz">完成小测</string>
    <string name="unitQuiz">单元小测</string>
    <string name="quickQuiz">智能小测</string>
    <string name="quizResultStory0">你是雷姆上身了吗 ~(´･_･`)ノ⌒凸\n加油啦</string>
    <string name="quizResultStory1">你是认真的吗 ~(´･_･`)ノ⌒凸\n加油啦</string>
    <string name="quizResultStory2">要认真复习错题啊啊啊</string>
    <string name="quizResultStory3">我拿不到满分都是石头门的选择.jpg</string>
    <string name="quizResultStory4">大吉大利,晚上吃鸡!</string>
    <string name="quizContent">试卷内容</string>
    <string name="quizHistory">小测历史</string>
    <string name="errQuestionDeleted">题目已被删除</string>
    <string name="confirmSkip">确定跳过这道题目？</string>
    <string name="confirmSkipMsg">一个人被逼急了什么都能做出来，除了数学题。。。</string>
    <string name="customQuiz">自定义小测</string>
    <string name="searchQuestion">搜索题目</string>
    <string name="filterHidden">包括已归档的题目</string>
    <string name="filterTitle">搜索和筛选</string>
    <string name="filterEmptyQuestionUi">当前筛选条件下找不到错题</string>
    <string name="filterEmptyUnitUi">当前筛选条件下找不到单元</string>
    <string name="questionType">题目类型</string>
    <string name="searchUnit">搜索单元</string>
    <string name="filterHiddenUnit">包括已归档的单元</string>
    <string name="undoHide">取消归档</string>
    <string name="hiddenUndoed">已取消归档</string>
    <string name="changeSaved">更改已保存</string>
    <string name="hiddenDone">已归档</string>
    <string name="hiddenDialogMsg">归档的错题不会删除，但是不会在错题列表、小测中出现，且不会纳入统计。</string>
    <string name="hiddenDialogTitle">确定归档错题？</string>
    <string name="neverShowAgain">不再显示</string>
    <string name="confirmDelete">删除确认</string>
    <string name="hideUnit">归档单元</string>
    <string name="dialogHideUnitConfirm">确定归档单元？</string>
    <string name="dialogHideUnitConfirmMsg">如果你归档本单元，本单元下所有错题将会一同隐藏，这些错题不会在错题本和小测中出现，且不会纳入统计。</string>
    <string name="undoHideUnit">取消归档单元</string>
    <string name="more">more</string>
    <string name="unselectAll">取消选择</string>
    <string name="confirmMultiRmTitle">批量删除？</string>
    <string name="confirmMultiHideTitle">批量归档/取消归档？</string>
    <string name="newUnitTitle">创建单元</string>
    <string name="done">完成</string>
    <string name="quizDailyEmptyNotice">你这个星期好像还没做过题…</string>
    <string name="chartQuizName">最近一周的小测记录</string>
    <string name="titleReviewRatio">错题掌握程度</string>
    <string name="last5Log">最近5次做题记录</string>
    <string name="reviewRatioHigh">无需复习</string>
    <string name="reviewRatioMid">多瞄几眼吧</string>
    <string name="reviewRatioLow">认真复习啊</string>
    <string name="reviewRatioUnknown">小测多几次再来看吧</string>
    <string name="question">题目</string>
    <string name="unitReviewRatio">单元掌握程度</string>
    <string name="quizCorrectRatio">小测正确率</string>
    <string name="reviewSuggestion">复习建议</string>
    <string name="resetStatSuccessful">已重置统计信息</string>
    <string name="quizWarnEmptyQuestion">记录些错题再来小测吧~</string>
    <string name="randomQuiz">随机小测</string>
    <string name="rename">重命名</string>
    <string name="confirmMultiResetStat">重置统计信息?</string>
    <string name="renameUnitTitle">重命名</string>
    <string name="reviewRatio">掌握程度</string>
    <string name="reviewNice">好</string>
    <string name="reviewMid">一般</string>
    <string name="reviewBad">差</string>
    <string name="reviewUnknown">未知</string>
    <string name="filterFavourite">仅已喜欢的题目</string>
    <string name="StatReviewPie">错题的掌握情况分布</string>
    <string name="warning">警告</string>
    <string name="dangerWarning">⚠⚠⚠警告⚠⚠⚠</string>
    <string name="notice">提示</string>
    <string name="titleShare">选择分享方式</string>
    <string name="saved">已保存</string>
    <string-array name="learning_subjects">
        <item>语文</item>
        <item>数学</item>
        <item>英语</item>
        <item>物理</item>
        <item>化学</item>
        <item>生物</item>
        <item>政治</item>
        <item>历史</item>
        <item>地理</item>
    </string-array>
    <string-array name="question_type">
        <item>单选题</item>
        <item>多选题</item>
        <item>可输入的填空题</item>
        <item>填空题</item>
        <item>解答题</item>
    </string-array>
    <string-array name="photoProvidePath">
        <item>拍照</item>
        <item>选择照片</item>
    </string-array>
    <string-array name="imageOptionMenu">
        <item>删除照片</item>
    </string-array>
    <string-array name="settings_workbookStorageLoc">
        <item>外部(建议)</item>
        <item>内部(应用卸载时错题本将全部清除,可别说我没提醒你哦)</item>
    </string-array>
    <string-array name="quiz_log_operate">
        <item>查看详细得分</item>
        <item>重新测试</item>
    </string-array>
    <string-array name="settings_workbookStorageLoc_val">
        <item>public</item>
        <item>internal</item>
    </string-array>
    <string-array name="question_multi_options">
        <item>切换归档/取消归档</item>
        <item>重置统计信息</item>
        <item>删除</item>
    </string-array>
    <string-array name="settings_quiz_quizSize">
        <item>5题</item>
        <item>10题</item>
        <item>15题</item>
        <item>20题</item>
        <item>25题</item>
        <item>30题</item>
    </string-array>
    <string-array name="settings_quiz_quizSize_val">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="unit_multi_options">
        <item>切换归档/取消归档</item>
        <item>重置统计信息</item>
        <item>删除</item>
    </string-array>
</resources>