<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singleChoiceAnswer"
        style="@style/textValue"
        android:layout_margin="8dp"
        />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/a"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/answerA"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/b"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/answerB"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/c"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/answerC"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/d"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/answerD"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>
